[Mobile]: fixes on mobile screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,4 +32,8 @@
 -------------------------------------------------------------- */
 html {
   scroll-behavior: smooth;
+
+  body {
+    overflow: hidden;
+  }
 }
