--- a/src/snippets/_pagegrid.scss
+++ b/src/snippets/_pagegrid.scss
@@ -1,4 +1,13 @@
 .page-grid {
-  display: grid;
-  grid-template-columns: auto 1fr;
+  @include desktop {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+  }
+
+  .page-content {
+    grid-column: 2/3;
+  }
+
+  .socialnav-wrapper {
+  }
 }
