--- a/src/styles/_image.scss
+++ b/src/styles/_image.scss
@@ -2,6 +2,10 @@
   position: relative;
 
   &--dropshadow {
+    @include mobile {
+      transform: translateX(-0.5rem);
+    }
+
     &::before {
       background-color: $secondary;
       content: "";
